--- a/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/src/app/componentes/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -4,16 +4,32 @@
   </header>
   <form action="#">
     <label for="pensamento">Pensamento</label>
-    <input type="textarea" class="input" id="pensamento" name="pensamento" placeholder="Digite o seu pensamento">
+    <input
+    type="textarea"
+    class="input"
+    id="pensamento"
+    name="pensamento"
+    placeholder="Digite o seu pensamento"
+    [(ngModel)]="pensamento.conteudo">
 
     <label for="autoria">Autoria</label>
-    <input type="textarea" class="input" id="autoria" name="autoria" placeholder="Digite a sua fonte">
+    <input type="textarea"
+    class="input"
+    id="autoria"
+    name="autoria"
+    placeholder="Digite a sua fonte"
+    [(ngModel)]="pensamento.autoria">
 
     <label for="modelo">Selecione o modelo do card:</label>
     <div class="container-radio">
       <div class="radio-modelo">
         <label for="modelo1">
-          <input type="radio" id="modelo1" value="modelo1" name="modelo-card">
+          <input type="radio"
+          id="modelo1"
+          value="modelo1"
+          name="modelo-card"
+          [(ngModel)]="pensamento.modelo"
+          >
           <div class="custom-radio">
             <span></span>
           </div>
@@ -22,13 +38,18 @@
         Prévia:
         <div class="modelo modelo1 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo1.png" alt="Aspas azuis">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria"><b>Aqui vai a autoria</b></p>
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria"><b>{{pensamento.autoria}}</b></p>
         </div>
       </div>
       <div class="radio-modelo">
         <label for="modelo2">
-          <input type="radio" id="modelo2" value="modelo2" name="modelo-card">
+          <input type="radio"
+          id="modelo2"
+          value="modelo2"
+          name="modelo-card"
+          [(ngModel)]="pensamento.modelo"
+          >
           <div class="custom-radio">
             <span></span>
           </div>
@@ -37,13 +58,18 @@
         Prévia:
         <div class="modelo modelo2 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo2.png" alt="Aspas azul claro">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria"><b>Aqui vai a autoria</b></p>
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
         </div>
       </div>
       <div class="radio-modelo">
         <label for="modelo3">
-          <input type="radio" id="modelo3" value="modelo3" name="modelo-card">
+          <input type="radio"
+          id="modelo3"
+          value="modelo3"
+          name="modelo-card"
+          [(ngModel)]="pensamento.modelo"
+          >
           <div class="custom-radio">
             <span></span>
           </div>
@@ -52,14 +78,14 @@
         Prévia:
         <div class="modelo modelo3 ff-roboto-mono">
           <img src="../../../../assets/imagens/modelo3.png" alt="Aspas verdes">
-          <p class="conteudo">Aqui vai o conteúdo</p>
-          <p class="autoria"><b>Aqui vai a autoria</b></p>
+          <p class="conteudo">{{ pensamento.conteudo }}</p>
+          <p class="autoria"><b>{{ pensamento.autoria }}</b></p>
         </div>
       </div>
     </div>
     <div class="acoes">
-      <button class="botao">Salva</button>
-      <button class="botao">Cancelar</button>
+      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button (click)="cancelarPensamento()" routerLink="/listarPensamento" class="botao">Cancelar</button>
     </div>
   </form>
 </section>
